--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         <version.org.apache.velocity>1.6.3</version.org.apache.velocity>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
         <version.org.jboss.logging>3.1.2.GA</version.org.jboss.logging>
-        <version.org.jboss.modules.jboss-modules>1.1.2.GA</version.org.jboss.modules.jboss-modules>
+        <version.org.jboss.modules.jboss-modules>1.1.3.GA</version.org.jboss.modules.jboss-modules>
         <version.org.jboss.vfs>3.1.0.Final</version.org.jboss.vfs>
         <version.org.jboss.spec.javax.servlet.api>1.0.0.Final</version.org.jboss.spec.javax.servlet.api>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
@@ -85,11 +85,11 @@
         <!-- Build configuration -->
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
-        <!-- Maven plugins -->
-        <version.maven.compiler>2.5.1</version.maven.compiler>
-        <version.maven.surefire>2.12.1</version.maven.surefire>
         <version.maven.release>2.3.2</version.maven.release>
-        <version.maven.jar>2.2</version.maven.jar>
+        <version.compiler.plugin>2.5.1-jboss-2</version.compiler.plugin>
+        <version.surefire.plugin>2.12.1</version.surefire.plugin>
+        <version.release.plugin>2.3.2</version.release.plugin>
+        <version.jar.plugin>2.4</version.jar.plugin>
     </properties>
 
     <build>
@@ -97,10 +97,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${version.maven.compiler}</version>
                 <configuration>
-                    <encoding>UTF-8</encoding>
-                    <fork>true</fork>
+                    <showDeprecation>true</showDeprecation>
+                    <showWarnings>true</showWarnings>
+                    <encoding>UTF8</encoding>
+                    <compilerArguments>
+                        <source>${maven.compiler.argument.source}</source>
+                        <target>${maven.compiler.argument.target}</target>
+                    </compilerArguments>
                 </configuration>
             </plugin>
 
@@ -115,7 +119,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${version.maven.surefire}</version>
                 <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <includes>
@@ -132,7 +135,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>${version.maven.jar}</version>
                 <executions>
                     <execution>
                         <goals>
