--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
         <version.surefire.plugin>2.12.1</version.surefire.plugin>
         <version.release.plugin>2.3.2</version.release.plugin>
         <version.jar.plugin>2.4</version.jar.plugin>
+        <version.datanucleus.plugin>3.1.0-release</version.datanucleus.plugin>
     </properties>
 
     <build>
