--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
         <version.org.datanucleus.gae>2.1.0-final</version.org.datanucleus.gae>
         <version.org.datanucleus.jdo>3.0</version.org.datanucleus.jdo>
         <version.org.hibernate.search>4.2.0.Beta1</version.org.hibernate.search>
-        <version.org.infinispan>5.2.0.Beta1</version.org.infinispan>
+        <version.org.infinispan>5.2.0.Beta2</version.org.infinispan>
         <version.net.jcip>1.0</version.net.jcip>
         <version.metainf>1.1</version.metainf>
         <version.org.apache.httpcomponents>4.1.1</version.org.apache.httpcomponents>
@@ -447,6 +447,12 @@
             </dependency>
 
             <dependency>
+                <groupId>org.apache.lucene</groupId>
+                <artifactId>lucene-memory</artifactId>
+                <version>${version.org.apache.lucene}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.apache.velocity</groupId>
                 <artifactId>velocity</artifactId>
                 <version>${version.org.apache.velocity}</version>
@@ -507,6 +513,12 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-search-engine</artifactId>
                 <version>${version.org.hibernate.search}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.solr</groupId>
+                        <artifactId>solr-analysis-extras</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
