--- a/pom.xml
+++ b/pom.xml
@@ -64,16 +64,16 @@
         <version.javax.jpa2>1.0.1.Final</version.javax.jpa2>
         <version.javax.mail>1.4.4</version.javax.mail>
         <version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>1.0.0.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>
-        <version.org.datanucleus.core>3.1.0-release</version.org.datanucleus.core>
-        <version.org.datanucleus.jpa>3.1.0-release</version.org.datanucleus.jpa>
-        <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
-        <version.org.datanucleus.gae>2.1.0-final</version.org.datanucleus.gae>
-        <version.org.datanucleus.jdo>3.0</version.org.datanucleus.jdo>
         <version.org.hibernate.search>4.2.0.Beta1</version.org.hibernate.search>
         <version.org.infinispan>5.2.0.Beta2</version.org.infinispan>
         <version.net.jcip>1.0</version.net.jcip>
         <version.metainf>1.1</version.metainf>
         <version.org.apache.httpcomponents>4.1.1</version.org.apache.httpcomponents>
+        <!-- DataNucleus -->
+        <version.org.datanucleus>3.1.2</version.org.datanucleus>
+        <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
+        <version.org.datanucleus.gae>2.1.1</version.org.datanucleus.gae>
+        <version.org.datanucleus.jdo>3.0.1</version.org.datanucleus.jdo>
         <!-- Testing -->
         <version.junit>4.10</version.junit>
         <version.arquillian>1.0.1.Final</version.arquillian>
@@ -91,7 +91,7 @@
         <version.surefire.plugin>2.12.1</version.surefire.plugin>
         <version.release.plugin>2.3.2</version.release.plugin>
         <version.jar.plugin>2.4</version.jar.plugin>
-        <version.datanucleus.plugin>3.1.0-release</version.datanucleus.plugin>
+        <version.datanucleus.plugin>3.1.2</version.datanucleus.plugin>
     </properties>
 
     <build>
@@ -460,20 +460,26 @@
 
             <dependency>
                 <groupId>org.datanucleus</groupId>
+                <artifactId>datanucleus-core</artifactId>
+                <version>${version.org.datanucleus}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.datanucleus</groupId>
                 <artifactId>datanucleus-api-jpa</artifactId>
-                <version>${version.org.datanucleus.jpa}</version>
+                <version>${version.org.datanucleus}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.datanucleus</groupId>
+                <artifactId>datanucleus-api-jdo</artifactId>
+                <version>${version.org.datanucleus}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.google.appengine.orm</groupId>
                 <artifactId>datanucleus-appengine</artifactId>
                 <version>${version.org.datanucleus.gae}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.datanucleus</groupId>
-                <artifactId>datanucleus-core</artifactId>
-                <version>${version.org.datanucleus.core}</version>
             </dependency>
 
             <dependency>
