Add common base test class; which all CD ARQ tests should extend.

--- a/pom.xml
+++ b/pom.xml
@@ -359,6 +359,13 @@
                 <version>${project.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.jboss.capedwarf.blue</groupId>
+                <artifactId>capedwarf-common</artifactId>
+                <version>${project.version}</version>
+                <type>test-jar</type>
+            </dependency>
+
             <!-- Transform GAE code -->
 
             <dependency>
