--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -109,6 +109,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-common</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.jboss.shrinkwrap.resolver</groupId>
             <artifactId>shrinkwrap-resolver-api</artifactId>
             <scope>test</scope>
