--- a/cluster-tests/pom.xml
+++ b/cluster-tests/pom.xml
@@ -53,6 +53,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-common</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
            	<groupId>org.infinispan</groupId>
            	<artifactId>infinispan-core</artifactId>
             <scope>test</scope>
