--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -40,9 +40,13 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-preprocessors</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-api-1.0-sdk</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
