Simplify -Pgae exec.

--- a/pom.xml
+++ b/pom.xml
@@ -732,7 +732,7 @@
             <activation>
                 <activeByDefault>false</activeByDefault>
                 <property>
-                    <name>gae</name>
+                    <name>appengine.sdk.root</name>
                 </property>
             </activation>
             <dependencies>
