--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -115,6 +115,12 @@
         <dependency>
             <groupId>org.jboss.capedwarf.blue</groupId>
             <artifactId>capedwarf-common</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-common</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
