--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
         <version.arquillian.gae>1.0.0.Alpha3</version.arquillian.gae>
         <version.jboss.maven.transformer>1.0.0.Beta4</version.jboss.maven.transformer>
         <version.jboss.maven.arquillian>1.0.0.Alpha1</version.jboss.maven.arquillian>
+        <!-- Testing - MapReduce -->
+        <version.com.google.gae.mapper>r365</version.com.google.gae.mapper>
+        <version.charts4j>1.3</version.charts4j>
+        <version.commons-logging>1.1.1</version.commons-logging>
+        <version.org.apache.hadoop.core>0.20.2</version.org.apache.hadoop.core>
+        <version.org.json>20090211</version.org.json>
         <!-- Build configuration -->
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
@@ -675,6 +681,38 @@
                 <groupId>org.jboss.maven.plugins</groupId>
                 <artifactId>arquillian-transformer</artifactId>
                 <version>${version.jboss.maven.arquillian}</version>
+            </dependency>
+
+            <!-- Testing MapReduce -->
+
+            <dependency>
+                <groupId>com.google.appengine</groupId>
+                <artifactId>appengine-mapper</artifactId>
+                <version>${version.com.google.gae.mapper}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.googlecode.charts4j</groupId>
+                <artifactId>charts4j</artifactId>
+                <version>${version.charts4j}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-logging</groupId>
+                <artifactId>commons-logging</artifactId>
+                <version>${version.commons-logging}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-core</artifactId>
+                <version>${version.org.apache.hadoop.core}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>${version.org.json}</version>
             </dependency>
 
         </dependencies>
