--- a/pom.xml
+++ b/pom.xml
@@ -688,8 +688,7 @@
             <dependency>
                 <groupId>org.xerial</groupId>
                 <artifactId>sqlite-jdbc</artifactId>
-                <version>3.7.2</version>
-                <!--<version>#{version.org.xerial.sqlite}</version>-->
+                <version>${version.org.xerial.sqlite}</version>
             </dependency>
 
             <!-- Testing MapReduce -->
