--- a/pom.xml
+++ b/pom.xml
@@ -381,6 +381,13 @@
                 <type>test-jar</type>
             </dependency>
 
+            <dependency>
+                <groupId>org.jboss.capedwarf.blue</groupId>
+                <artifactId>capedwarf-testsuite</artifactId>
+                <version>${project.version}</version>
+                <type>test-jar</type>
+            </dependency>
+
             <!-- Transform GAE code -->
 
             <dependency>
