--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
         <version.cdi.api>1.0-SP4</version.cdi.api>
         <version.com.google.gae.api>1.7.3</version.com.google.gae.api>
         <version.com.google.guava>11.0.2</version.com.google.guava>
+        <version.json>20090211</version.json>
         <version.org.apache.lucene>3.6.1</version.org.apache.lucene>
         <version.org.apache.velocity>1.6.3</version.org.apache.velocity>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
@@ -432,6 +433,12 @@
             </dependency>
 
             <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>${version.org.json}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>jivesoftware</groupId>
                 <artifactId>smack</artifactId>
                 <version>${version.org.jivesoftware.smack}</version>
@@ -715,12 +722,6 @@
                 <groupId>org.apache.hadoop</groupId>
                 <artifactId>hadoop-core</artifactId>
                 <version>${version.org.apache.hadoop.core}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.json</groupId>
-                <artifactId>json</artifactId>
-                <version>${version.org.json}</version>
             </dependency>
 
         </dependencies>
