--- a/xmpp/pom.xml
+++ b/xmpp/pom.xml
@@ -27,6 +27,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>jivesoftware</groupId>
             <artifactId>smack</artifactId>
         </dependency>
