--- a/common/pom.xml
+++ b/common/pom.xml
@@ -17,6 +17,11 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.jboss.capedwarf.shared</groupId>
+            <artifactId>capedwarf-shared</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-api-1.0-sdk</artifactId>
         </dependency>
