--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
         <version.javax.jpa2>1.0.1.Final</version.javax.jpa2>
         <version.javax.mail>1.4.4</version.javax.mail>
         <version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>1.0.0.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>
-        <version.org.hibernate.search>4.2.0.CR1</version.org.hibernate.search>
+        <version.org.hibernate.search>4.2.0.Final</version.org.hibernate.search>
         <version.org.infinispan>5.2.0.CR1</version.org.infinispan>
         <version.net.jcip>1.0</version.net.jcip>
         <version.metainf>1.1</version.metainf>
