--- a/urlfetch/pom.xml
+++ b/urlfetch/pom.xml
@@ -23,6 +23,11 @@
 
         <dependency>
             <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-aspects</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
             <artifactId>capedwarf-common</artifactId>
         </dependency>
 
