--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <version.org.jboss.logging>3.1.2.GA</version.org.jboss.logging>
         <version.org.jboss.modules.jboss-modules>1.2.0.CR1</version.org.jboss.modules.jboss-modules>
         <version.org.jboss.vfs>3.1.0.Final</version.org.jboss.vfs>
+        <version.org.jboss.web>7.2.0.Final</version.org.jboss.web>
         <version.org.jboss.jboss-common-core>2.2.17.GA</version.org.jboss.jboss-common-core>
         <version.org.jboss.spec.javax.servlet.api>1.0.0.Final</version.org.jboss.spec.javax.servlet.api>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
@@ -437,6 +438,13 @@
                 <groupId>org.picketlink</groupId>
                 <artifactId>picketlink-consolidated-social</artifactId>
                 <version>${version.org.picketlink.consolidated.social}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.web</groupId>
+                <artifactId>jbossweb</artifactId>
+                <version>${version.org.jboss.web}</version>
+                <scope>provided</scope>
             </dependency>
 
             <!-- JPA2 -->
