--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
         <version.javax.mail>1.4.4</version.javax.mail>
         <version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>1.0.0.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>
         <version.org.hibernate.search>4.2.0.Final</version.org.hibernate.search>
+        <version.org.marshalling>1.3.16.GA</version.org.marshalling>
         <version.org.infinispan>5.2.1.Final</version.org.infinispan>
         <version.net.jcip>1.0</version.net.jcip>
         <version.metainf>1.1</version.metainf>
@@ -552,6 +553,20 @@
                 <groupId>org.apache.geronimo.specs</groupId>
                 <artifactId>geronimo-jta_1.1_spec</artifactId>
                 <version>${version.org.datanucleus.jta}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.marshalling</groupId>
+                <artifactId>jboss-marshalling</artifactId>
+                <version>${version.org.marshalling}</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.marshalling</groupId>
+                <artifactId>jboss-marshalling-river</artifactId>
+                <version>${version.org.marshalling}</version>
+                <scope>provided</scope>
             </dependency>
 
             <dependency>
