--- a/common/pom.xml
+++ b/common/pom.xml
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
-            <!-- scope>provided</scope -->
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
