--- a/pom.xml
+++ b/pom.xml
@@ -487,12 +487,14 @@
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcprov-jdk15on</artifactId>
                 <version>${version.org.bouncycastle}</version>
+                <scope>provided</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcmail-jdk15on</artifactId>
                 <version>${version.org.bouncycastle}</version>
+                <scope>provided</scope>
             </dependency>
 
             <dependency>
