Fix static init in web components.

--- a/testsuite/src/test/resources/init/web.xml
+++ b/testsuite/src/test/resources/init/web.xml
@@ -27,6 +27,10 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          metadata-complete="true">
 
+    <listener>
+        <listener-class>org.jboss.test.capedwarf.testsuite.init.support.InitTestListener</listener-class>
+    </listener>
+
     <filter>
         <filter-name>xfilter</filter-name>
         <filter-class>org.jboss.test.capedwarf.testsuite.init.support.InitTestFilter</filter-class>
