[CAPEDWARF-115]; Objectify test.

--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -233,6 +233,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.googlecode.objectify</groupId>
+            <artifactId>objectify</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
