--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,8 @@
         <!-- Testing Iddx -->
         <version.com.google.api-client>1.11.0-beta</version.com.google.api-client>
         <version.com.google.api-services-bigquery>v2-rev33-1.8.0-beta</version.com.google.api-services-bigquery>
+        <!-- Testing Objectify -->
+        <version.objectify>4.0b1</version.objectify>
         <!-- Build configuration -->
         <version.datanucleus.plugin>3.1.2</version.datanucleus.plugin>
     </properties>
@@ -859,6 +861,14 @@
                 <groupId>com.google.apis</groupId>
                 <artifactId>google-api-services-bigquery</artifactId>
                 <version>${version.com.google.api-services-bigquery}</version>
+            </dependency>
+
+            <!-- Objectify -->
+
+            <dependency>
+                <groupId>com.googlecode.objectify</groupId>
+                <artifactId>objectify</artifactId>
+                <version>${version.objectify}</version>
             </dependency>
 
         </dependencies>
