[CAPEDWARF-144]; add test for stats filter init.

--- a/pom.xml
+++ b/pom.xml
@@ -469,6 +469,12 @@
             </dependency>
 
             <dependency>
+                <groupId>com.google.appengine</groupId>
+                <artifactId>appengine-api-labs</artifactId>
+                <version>${version.com.google.gae.api}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.json</groupId>
                 <artifactId>json</artifactId>
                 <version>${version.org.json}</version>
