--- a/testsuite/src/test/resources/init/web.xml
+++ b/testsuite/src/test/resources/init/web.xml
@@ -36,8 +36,18 @@
         <filter-class>org.jboss.test.capedwarf.testsuite.init.support.InitTestFilter</filter-class>
     </filter>
 
+    <filter>
+        <filter-name>stats</filter-name>
+        <filter-class>com.google.appengine.tools.appstats.AppstatsFilter</filter-class>
+    </filter>
+
     <filter-mapping>
         <filter-name>xfilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>stats</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
